update test action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 name: Flutter Tests
-run-name: Triggered by ${{ github.event_name }} to ${{ github.ref }} by @${{ github.actor }
+run-name: Triggered by ${{ github.event_name }} to ${{ github.ref }} by @${{ github.actor }}
 
 on:
   push:
