--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,8 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build_and_deploy_job:
+  flutter_test_job:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Test
     steps:
