--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Copy files
+        run: |
+          touch .env
+          echo $ENV_STAGE >> .env
+          touch lib/firebase_options.dart
+          echo $FIREBASE_OPTIONS >> lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -22,3 +28,7 @@ jobs:
         run: flutter analyze
       - name: Test
         run: flutter test --coverage
+
+env:
+  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+  ENV_STAGE: ${{ secrets.ENV_STAGE }}
