--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,10 @@ run-name: Triggered by ${{ github.event_name }} to ${{ github.ref }} by @${{ git
 on:
   push:
 
+env:
+  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+  ENV_STAGE: ${{ secrets.ENV_STAGE }}
+
 jobs:
   flutter_test_job:
     runs-on: ubuntu-latest
@@ -16,8 +20,10 @@ jobs:
         run: |
           touch .env
           echo $ENV_STAGE >> .env
+          cat .env
           touch lib/firebase_options.dart
           echo $FIREBASE_OPTIONS >> lib/firebase_options.dart
+          cat lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -28,7 +34,3 @@ jobs:
         run: flutter analyze
       - name: Test
         run: flutter test --coverage
-
-env:
-  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
-  ENV_STAGE: ${{ secrets.ENV_STAGE }}
