--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
           echo $ENV_STAGE >> .env
           touch lib/firebase_options.dart
           echo $FIREBASE_OPTIONS >> lib/firebase_options.dart
-          echo "hello $ENV_STAGE"
+          cat lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
