--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Copy files
         run: |
           touch .env
-          echo echo '{{ secrets.ENV_STAGE }}' >> .env
+          echo echo ${{ secrets.ENV_STAGE }} >> .env
           touch lib/firebase_options.dart
-          echo echo '{{ secrets.FIREBASE_OPTIONS }}' >> lib/firebase_options.dart
+          echo echo ${{ secrets.FIREBASE_OPTIONS }} >> lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
