--- a/.github/workflows/azure-staging-deployment.yml
+++ b/.github/workflows/azure-staging-deployment.yml
@@ -19,6 +19,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Copy files
+        run: |
+          touch .env
+          echo ${{ secrets.ENV_STAGE }} >> .env
+          touch lib/firebase_options.dart
+          echo ${{ secrets.FIREBASE_OPTIONS }} >> lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
