update test action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
 name: Flutter Tests
 run-name: Triggered by ${{ github.event_name }} to ${{ github.ref }} by @${{ github.actor }}
 
-#env:
-#  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
-#  ENV_STAGE: ${{ secrets.ENV_STAGE }}
+env:
+  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+  ENV_STAGE: ${{ secrets.ENV_STAGE }}
 
 on:
   push:
