--- a/.github/workflows/azure-staging-deployment.yml
+++ b/.github/workflows/azure-staging-deployment.yml
@@ -1,6 +1,10 @@
 name: Azure Staging Deployment
 run-name: Triggered by ${{ github.event_name }} to ${{ github.ref }} by @${{ github.actor }}
 
+env:
+  FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+  ENV_STAGE: ${{ secrets.ENV_STAGE }}
+
 on:
   push:
     branches:
@@ -22,9 +26,9 @@ jobs:
       - name: Copy files
         run: |
           touch .env
-          echo ${{ secrets.ENV_STAGE }} >> .env
+          echo $ENV_STAGE >> .env
           touch lib/firebase_options.dart
-          echo ${{ secrets.FIREBASE_OPTIONS }} >> lib/firebase_options.dart
+          echo $FIREBASE_OPTIONS >> lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
