--- a/.github/workflows/azure-staging-deployment.yml
+++ b/.github/workflows/azure-staging-deployment.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Copy files
         run: |
           touch .env
-          echo $ENV_STAGE >> .env
+          echo "${{ secrets.ENV_STAGE }}" > .env
           touch lib/firebase_options.dart
-          echo $FIREBASE_OPTIONS >> lib/firebase_options.dart
+          echo "${{ secrets.FIREBASE_OPTIONS }}" > lib/firebase_options.dart
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
