--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,37 +35,38 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  firebase_core: ^2.10.0
-  firebase_analytics: ^10.1.0
-  firebase_auth: ^4.2.5
-  cloud_firestore: ^4.3.1
-  firebase_storage: ^11.0.10
+  firebase_core: ^2.15.1
+  firebase_analytics: ^10.4.5
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  firebase_storage: ^11.2.6
   firebase_dynamic_links: ^5.0.11
   firebase_performance: ^0.9.1+1
   flutter_dotenv: ^5.0.2
   fluro: ^2.0.5
-  onesignal_flutter: ^3.5.0
-  intl: 0.17.0
-  adaptive_theme: ^3.0.0
+  onesignal_flutter: ^5.0.0
+  intl: ^0.18.1
+  adaptive_theme: ^3.4.0
   shared_preferences: ^2.0.15
   percent_indicator: ^4.2.2
   card_loading: ^0.3.0
-  timeago: 3.3.0
+  timeago: ^3.5.0
   progress_indicators: ^1.0.0
   animated_snack_bar: ^0.3.0
-  connectivity_plus: ^2.1.0
+  connectivity_plus: ^4.0.2
   localstorage: ^4.0.0+1
   url_launcher: ^6.1.2
   video_player: ^2.6.0
-  network_info_plus: ^2.1.3
-  cool_alert: ^1.1.0
-  http: ^0.13.4
+  network_info_plus: ^4.0.2
+  cool_alert: ^2.0.1
+  http: ^1.1.0
   mask_text_input_formatter: ^2.3.0
-  extended_image: ^6.2.1
-  badges: ^2.0.3
-  fuzzywuzzy: 0.1.6
+  extended_image: ^8.1.0
+  badges: ^3.1.2
+  fuzzywuzzy: ^1.1.6
   visibility_detector: ^0.4.0+2
   flutter_svg: ^2.0.7
+  material_text_fields: ^1.0.3
 
 dev_dependencies:
   integration_test:
