email verification on onboarding page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   flutter_svg: ^2.0.7
   material_text_fields: ^1.0.3
+  file_picker: ^5.5.0
 
 dev_dependencies:
   integration_test:
