--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/icons/
     - assets/images/pel_icons/
     - assets/images/pel_abbrev/
     - .env
