--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   sanfrancisco:
     depends_on:
       - rincon
-      - jaeger
     image: pacificesports/sanfrancisco
     ports:
       - "${SF_PORT}:${SF_PORT}"
@@ -22,11 +21,10 @@ services:
       DISCORD_GUILD: $DISCORD_GUILD
       DISCORD_CHANNEL: $SF_DISCORD_CHANNEL
       STATUS_EMAIL: $SF_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
       FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
 
   rincon:
-    depends_on:
-      - jaeger
     image: pacificesports/rincon
     ports:
       - "${RINCON_PORT}:${RINCON_PORT}"
@@ -47,9 +45,32 @@ services:
       STATUS_EMAIL: $RINCON_STATUS_EMAIL
       REGISTRY_UPDATE_DELAY: $RINCON_REGISTRY_UPDATE_DELAY
 
+  sacramento:
+    depends_on:
+      - rincon
+    image: pacificesports/sacramento
+    ports:
+      - "${SACRAMENTO_PORT}:${SACRAMENTO_PORT}"
+    environment:
+      ENV: $ENV
+      SERVICE_NAME: "Sacramento"
+      PORT: $SACRAMENTO_PORT
+      RINCON_PORT: $RINCON_PORT
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_DATABASE: $POSTGRES_DATABASE
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_PORT: $POSTGRES_PORT
+      DISCORD_TOKEN: $DISCORD_TOKEN
+      DISCORD_GUILD: $DISCORD_GUILD
+      DISCORD_CHANNEL: $SACRAMENTO_DISCORD_CHANNEL
+      STATUS_EMAIL: $SACRAMENTO_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
+      FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
+
   berkeley:
     depends_on:
-      - jaeger
+      - rincon
     image: pacificesports/berkeley
     ports:
       - "${BERKELEY_PORT}:${BERKELEY_PORT}"
@@ -67,4 +88,28 @@ services:
       DISCORD_GUILD: $DISCORD_GUILD
       DISCORD_CHANNEL: $BERKELEY_DISCORD_CHANNEL
       STATUS_EMAIL: $BERKELEY_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
+      FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
+
+  sanjose:
+    depends_on:
+      - rincon
+    image: pacificesports/sanjose
+    ports:
+      - "${SANJOSE_PORT}:${SANJOSE_PORT}"
+    environment:
+      ENV: $ENV
+      SERVICE_NAME: "SanJose"
+      PORT: $SANJOSE_PORT
+      RINCON_PORT: $RINCON_PORT
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_DATABASE: $POSTGRES_DATABASE
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_PORT: $POSTGRES_PORT
+      DISCORD_TOKEN: $DISCORD_TOKEN
+      DISCORD_GUILD: $DISCORD_GUILD
+      DISCORD_CHANNEL: $SANJOSE_DISCORD_CHANNEL
+      STATUS_EMAIL: $SANJOSE_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
       FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
