--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   flutter_svg: ^2.0.7
   material_text_fields: ^1.0.3
   file_picker: ^5.5.0
+  dot_navigation_bar: ^1.0.2
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   integration_test:
