--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,3 +113,26 @@ services:
       STATUS_EMAIL: $SANJOSE_STATUS_EMAIL
       FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
       FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
+
+  monterey:
+    depends_on:
+      - rincon
+    image: pacificesports/monterey
+    ports:
+      - "${MONTEREY_PORT}:${MONTEREY_PORT}"
+    environment:
+      ENV: $ENV
+      SERVICE_NAME: "Monterey"
+      PORT: $MONTEREY_PORT
+      RINCON_PORT: $RINCON_PORT
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_DATABASE: $POSTGRES_DATABASE
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_PORT: $POSTGRES_PORT
+      DISCORD_TOKEN: $DISCORD_TOKEN
+      DISCORD_GUILD: $DISCORD_GUILD
+      DISCORD_CHANNEL: $MONTEREY_DISCORD_CHANNEL
+      STATUS_EMAIL: $MONTEREY_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
+      FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
