add losangeles to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,3 +136,26 @@ services:
       STATUS_EMAIL: $MONTEREY_STATUS_EMAIL
       FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
       FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
+
+  losangeles:
+    depends_on:
+      - rincon
+    image: pacificesports/losangeles
+    ports:
+      - "${LOSANGELES_PORT}:${LOSANGELES_PORT}"
+    environment:
+      ENV: $ENV
+      SERVICE_NAME: "LosAngeles"
+      PORT: $LOSANGELES_PORT
+      RINCON_PORT: $RINCON_PORT
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_DATABASE: $POSTGRES_DATABASE
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_PORT: $POSTGRES_PORT
+      DISCORD_TOKEN: $DISCORD_TOKEN
+      DISCORD_GUILD: $DISCORD_GUILD
+      DISCORD_CHANNEL: $LOSANGELES_DISCORD_CHANNEL
+      STATUS_EMAIL: $LOSANGELES_STATUS_EMAIL
+      FIREBASE_PROJECT_ID: $FIREBASE_PROJECT_ID
+      FIREBASE_SERVICE_ACCOUNT: $FIREBASE_SERVICE_ACCOUNT
