create/edit tournament page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   file_picker: ^5.5.0
   dot_navigation_bar: ^1.0.2
   salomon_bottom_bar: ^3.3.2
+  markdown_editor_plus: ^0.2.13
 
 dev_dependencies:
   integration_test:
